# gas-sim

./: .replit  README.md  basic.md  pyproject.toml  replit.md  requirements.txt
gas_sim1/gas_app/: app.py  docker-compose.yml  gas_simulator.py  modbus_client.py
gas_sim2/gas_app/: app.py
gas_sim2/gas_app/templates/: dashboard.html
gas_sim3/gas_app/: Dockerfile  app.py  docker-compose.yml
gas_sim3/gas_app/matlab_scripts/: simulate_gas_transition.m
gas_sim3/gas_app/templates/: index.html
gas_sim4/gas_app/: README.md
gas_sim4/gas_app/ids/: app.py
gas_sim4/gas_app/physics/: app.py
gas_sim4/gas_app/scada/: app.py
gas_sim4/gas_app/web/: app.py
gas_sim5/gas_app/: requiremnets.txt
gas_sim5/gas_app/services/hmi/: Dockerfile  app.py  docker-compose.yml
gas_sim5/gas_app/services/process-sim/: app.py  engine.py  modbus_server.py
gas_simulator/: main.py
gas_simulator/database/: data_manager.py
gas_simulator/physics/: __init__.py  gas_physics_engine.py
gas_simulator/plc/: __init__.py  base_plc.py  compressor_management_plc.py  emergency_shutdown_plc.py  flow_regulation_plc.py  leak_detection_plc.py  plc_manager.py  pressure_control_plc.py  safety_monitoring_plc.py  temperature_control_plc.py  valve_control_plc.py
gas_simulator/scada/: __init__.py  scada_system.py
gas_simulator/sensors/: __init__.py  sensor_manager.py
gas_simulator/templates/: dashboard.html
