[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "lxml>=6.0.1",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pandapipes>=0.12.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "pymodbus>=3.11.1",
    "pymodbustcp>=0.3.0",
    "python-socketio>=5.13.0",
    "requests>=2.32.5",
    "scipy>=1.16.1",
    "xmlschema>=4.1.0",
]
